--- a/styles/common.css
+++ b/styles/common.css
@@ -9,7 +9,7 @@
     --primary-blue: #007FB0;
     --primary-grey: #34516C;
 
-    --navbar-height: 100px;
+    --navbar-height: 85px;
 }
 
 body {
@@ -42,6 +42,10 @@ body {
     letter-spacing: 1px;
 
     display: table;
+
+    /* Ensure navbar is always visible over other elements.
+    MDN Reference: https://developer.mozilla.org/en-US/docs/Web/CSS/z-index */
+    z-index: 9999;
 }
 
 .navbar table {
@@ -49,16 +53,16 @@ body {
 }
 
 .navbar-col {
-    width: 20%;
+    width: 33.33%;
     display: table-cell;
 }
 
 /* The important keyword allows us to override other styles.
 This is used several times below. MDN Reference:
 https://developer.mozilla.org/en-US/docs/Web/CSS/important */
-.nav-section-main {
+/* .nav-section-main {
     width: 60%!important;
-}
+} */
 
 .navigation-list {
     display: flex;
@@ -107,6 +111,12 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/:hover
     width: 100%;
 }
 
+/* Underline is always present if the link is "selected" */
+.navbar a.selected::after {
+    transition: none;
+    width: 100%;
+}
+
 /* Presets for CSS layouts. The CSS "table" layout system is used
 for large level layouts, and the "flexbox" system is used for widgets
 and smaller items. MDN Reference:
@@ -114,6 +124,11 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/display */
 
 .row {
     display: table;
+}
+
+.col-33 {
+    width: 33.33%;
+    float: left;
 }
 
 .col-40 {
@@ -131,6 +146,29 @@ content is horizontally centered */
 .flex-content-center {
     display: flex;
     justify-content: center;
+}
+
+/* 
+  Breadcrumb Styles
+*/
+
+.breadcrumbs {
+    font-size: 24px;
+    font-weight: 600;
+    padding-left: 20px;
+
+    /* Prevents the user from highlighting the breadcrumb text.
+    Includes compatibility for safari browsers. MDN Reference:
+    https://developer.mozilla.org/en-US/docs/Web/CSS/user-select */
+    user-select: none;
+    --webkit-user-select: none;
+}
+
+.breadcrumbs a {
+    color: black;
+    text-decoration: none;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 /* 
@@ -152,3 +190,16 @@ footer p {
     font-weight: 300;
     font-size: 24px;
 }
+
+/* 
+  Responsive Styles
+*/
+/* @media (max-width: 768px) {
+    [class*="col-"] {
+      width: 100%;
+    }
+
+    .hidden-sm {
+        display: none;
+    }
+} */
