--- a/styles/index.css
+++ b/styles/index.css
@@ -8,22 +8,32 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/@import */
 }
 
 .intro-card {
+    font-size: 20px;
+
     background-color: var(--primary-grey);
     border-radius: 30px;
     color: white;
-    padding: 10px;
+    padding: 40px;
 
     width: 90%;
+    margin: 10px;
 }
 
 .intro-card button {
     background-color: var(--primary-red);
+    color: white!important;
 
     border: none;
     border-radius: 10px;
 
     padding: 10px 40px;
     color: inherit;
+    font-size: 20px;
+
+    margin-top: 20px;
+    width: 100%;
+
+    cursor: pointer;
 }
 
 .intro-video {
