--- a/styles/common.css
+++ b/styles/common.css
@@ -196,20 +196,27 @@ footer {
     padding-left: 30px;
 }
 
-footer p {
-    font-weight: 300;
-    font-size: 24px;
+footer img {
+    width: 200px;
 }
 
 /* 
   Responsive Styles
 */
-/* @media (max-width: 768px) {
+@media (max-width: 1024px) {
     [class*="col-"] {
       width: 100%;
+    }
+
+    .breadcrumbs {
+        font-size: 12px;
     }
 
     .hidden-sm {
         display: none;
     }
-} */
+
+    :root {
+        --navbar-height: 55px
+    }
+}
