--- a/styles/index.css
+++ b/styles/index.css
@@ -43,6 +43,7 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/@import */
 .popular-section {
     padding-top: 20px;
     text-align: center;
+    padding-bottom: 150px;
 }
 
 .popular-section h2 {
@@ -53,4 +54,20 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/@import */
 .popular-section h3 {
     font-weight: 300;
     letter-spacing: 1px;
+}
+
+.popular-section iframe {
+    width: 50%;
+    height: 300px;
+}
+
+/* 
+  Responsive Styles
+*/
+
+@media (max-width: 1024px) {
+    .popular-section iframe {
+        width: 100%;
+        height: 300px;
+    }
 }
