--- a/styles/index.css
+++ b/styles/index.css
@@ -2,6 +2,10 @@
 https://developer.mozilla.org/en-US/docs/Web/CSS/@import */
 @import url(common.css);
 
+/* 
+  Top introduction section
+*/
+
 .intro-section {
     max-width: 1200px;
     margin: auto;
@@ -40,23 +44,31 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/@import */
     width: 100%;
 }
 
-.popular-section {
+/* 
+  Bottom information section
+*/
+
+.info-section {
     padding-top: 20px;
     text-align: center;
     padding-bottom: 150px;
 }
 
-.popular-section h2 {
+.info-section h2 {
     font-weight: 500;
     font-size: 40px;
 }
 
-.popular-section h3 {
+.info-section h3 {
     font-weight: 300;
     letter-spacing: 1px;
 }
 
-.popular-section iframe {
+.info-section a {
+    color: var(--primary-blue);
+}
+
+.info-section iframe {
     width: 50%;
     height: 300px;
 }
@@ -66,7 +78,7 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/@import */
 */
 
 @media (max-width: 1024px) {
-    .popular-section iframe {
+    .info-section iframe {
         width: 100%;
         height: 300px;
     }
