--- a/root/styles/index.css
+++ b/root/styles/index.css
@@ -74,6 +74,17 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/@import */
 }
 
 /* 
+  Offers
+*/
+
+.offer-card {
+    background-color: #d5d5d5;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px;
+}
+
+/* 
   Responsive Styles
 */
 
