--- a/root/styles/common.css
+++ b/root/styles/common.css
@@ -146,6 +146,11 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/display */
     display: table;
 }
 
+.col-20 {
+    width: 20%;
+    float: left;
+}
+
 .col-33 {
     width: 33.33%;
     float: left;
