--- a/root/styles/products.css
+++ b/root/styles/products.css
@@ -110,6 +110,41 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/scale */
     width: 70%;
 }
 
+/*
+  Search design
+*/
+
+.search-section {
+    padding-top: 20px;
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+.search-bar {
+    border: 0;
+    border-bottom: 1px solid black;
+
+    font-size: 1.5em;
+    font-weight: 400;
+
+    padding: 10px;
+    width: 30%;
+}
+
+.search-bar:focus {
+    outline: 0;
+}
+
+.search-submit {
+    background-color: #cacaca;
+    color: black;
+    border: none;
+    border-radius: 10px;
+    padding: 5px 10px;
+    cursor: pointer;
+    font-size: 1.5em;
+}
+
 /* 
   Responsive design
 */
